--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+  <div class="whole-page-wrapper">
   {% include head.html %}
 
   <body>
@@ -16,5 +16,5 @@
     {% include footer.html %}
 
   </body>
-
+  </div>
 </html>
