--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,4 +1,16 @@
 /**
+ * Whole page wrapper
+ */
+html,body {
+    height: 100%;
+}
+.whole-page-wrapper {
+    min-height: 100%;
+    position:relative;
+}
+
+
+/**
  * Site header
  */
 .site-header {
@@ -93,7 +105,12 @@
  */
 .site-footer {
     border-top: 1px solid $grey-color-light;
-    padding: $spacing-unit 0;
+    padding: $spacing-unit/2 0;
+    position: absolute;
+    bottom:0;
+    height: 23px;
+    width:100%;
+    background-color: $grey-color-light;
 }
 
 .footer-heading {
@@ -111,28 +128,31 @@
     font-size: 15px;
     color: $grey-color;
     margin-left: -$spacing-unit / 2;
+
     @extend %clearfix;
 }
 
 .footer-col {
     float: left;
-    margin-bottom: $spacing-unit / 2;
+    margin-bottom: 0;
     padding-left: $spacing-unit / 2;
+    min-width: 100%;
+    text-align: center;
+}
+
+.footer-col p{
+    margin-bottom: 0;
 }
 
 .footer-col-1 {
-    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width:         calc(35% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-2 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width:         calc(20% - (#{$spacing-unit} / 2));
+    width: -webkit-calc(40% - (#{$spacing-unit} / 2));
+    width:         calc(40% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-3 {
-    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width:         calc(45% - (#{$spacing-unit} / 2));
+    text-align: right;
+    width: -webkit-calc(60% - (#{$spacing-unit} / 2));
+    width:         calc(60% - (#{$spacing-unit} / 2));
 }
 
 @include media-query($on-laptop) {
@@ -162,7 +182,8 @@
  * Page content
  */
 .page-content {
-    padding: $spacing-unit 0;
+    padding: $spacing-unit/2 0 0 0;
+    padding-bottom:84px;
 }
 
 .page-heading {
@@ -208,7 +229,7 @@
 }
 
 .post-content {
-    margin-bottom: $spacing-unit;
+    
 
     h2 {
         font-size: 32px;
