--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -64,7 +64,7 @@ figcaption {
  * Lists
  */
 ul, ol {
-    margin-left: $spacing-unit;
+    margin-left: $spacing-unit / 3 * 2;
 }
 
 li {
@@ -89,16 +89,13 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-    color: $brand-color;
+    color: $link-color;
     text-decoration: none;
 
-    &:visited {
-        color: darken($brand-color, 15%);
-    }
 
     &:hover {
-        color: $text-color;
-        text-decoration: underline;
+        color: $link-color-light;
+        text-shadow: 0px 0px 4px $link-color-lighter;
     }
 }
 
@@ -108,12 +105,14 @@ a {
  * Blockquotes
  */
 blockquote {
-    color: $grey-color;
-    border-left: 4px solid $grey-color-light;
+    color: $text-color-dark;
+    border-left: 4px solid $background-color-darker;
     padding-left: $spacing-unit / 2;
-    font-size: 18px;
-    letter-spacing: -1px;
-    font-style: italic;
+    padding-top: $spacing-unit / 2;
+    padding-bottom: $spacing-unit / 2;
+    font-size: $small-font-size;
+    /*letter-spacing: -0.2px;*/
+    background-color: $background-color-dark;
 
     > :last-child {
         margin-bottom: 0;
@@ -128,13 +127,13 @@ blockquote {
 pre,
 code {
     font-size: 15px;
-    border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    background-color: #eef;
+    /*border: 1px solid $grey-color-light;*/
+    background-color: $code-background-color-solid;
 }
 
 code {
     padding: 1px 5px;
+    background-color: $code-background-color;
 }
 
 pre {
@@ -154,8 +153,8 @@ pre {
  * Wrapper
  */
 .wrapper {
-    max-width: -webkit-calc(800px - (#{$spacing-unit} * 2));
-    max-width:         calc(800px - (#{$spacing-unit} * 2));
+    max-width: -webkit-calc(#{$main-max-width} - (#{$spacing-unit} * 2));
+    max-width:         calc(#{$main-max-width} - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
     padding-right: $spacing-unit;
@@ -163,8 +162,8 @@ pre {
     @extend %clearfix;
 
     @include media-query($on-laptop) {
-        max-width: -webkit-calc(800px - (#{$spacing-unit}));
-        max-width:         calc(800px - (#{$spacing-unit}));
+        max-width: -webkit-calc(#{$main-max-width} - (#{$spacing-unit}));
+        max-width:         calc(#{$main-max-width} - (#{$spacing-unit}));
         padding-right: $spacing-unit / 2;
         padding-left: $spacing-unit / 2;
     }
