--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -201,7 +201,7 @@ html,body {
 
 .post-meta {
     font-size: $small-font-size;
-    color: $grey-color;
+    color: $text-color-light;
 }
 
 .post-link {
