--- a/css/main.scss
+++ b/css/main.scss
@@ -6,17 +6,29 @@
 
 
 // Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
+$base-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
+$main-max-width:	45em;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$text-color:					#3F372F;
+$text-color-light:				lighten($text-color, 15%);
+$text-color-dark:				darken($text-color, 15%);
+$background-color:				#dad1c8;
+$background-color-dark:			darken($background-color, 5%);
+$background-color-darker:		darken($background-color, 15%);
+$code-background-color:			rgba(236,230,224,0.5);
+$code-background-color-solid:	rgba(236,230,224,1);
+$inline-code-border-color:		#634b4a;
+$link-color:					#9c8a70;
+$link-color-light:				lighten($link-color, 15%);
+$link-color-lighter:			lighten($link-color, 25%);
+$link-color-dark:				darken($link-color, 15%);
 
+$brand-color:					#2a7ae2;
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
