Link color minor change

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -95,7 +95,7 @@ a {
 
     &:hover {
         color: $link-color-light;
-        text-shadow: 0px 0px 4px $link-color-lighter;
+        /*text-shadow: 0px 0px 4px $link-color-lighter;*/
     }
 }
 
