--- a/css/main.scss
+++ b/css/main.scss
@@ -23,7 +23,7 @@ $background-color-darker:		darken($background-color, 15%);
 $code-background-color:			rgba(236,230,224,0.5);
 $code-background-color-solid:	rgba(236,230,224,1);
 $inline-code-border-color:		#634b4a;
-$link-color:					#9c8a70;
+$link-color:					#668077;
 $link-color-light:				lighten($link-color, 15%);
 $link-color-lighter:			lighten($link-color, 25%);
 $link-color-dark:				darken($link-color, 15%);
