--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col">
-        <p class="text">{{ site.description }}</p>
+        <p class="text">Sharp mind, gentle heart.</p>
       </div>
     </div>
 
