--- a/css/main.scss
+++ b/css/main.scss
@@ -11,15 +11,17 @@ $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$spacing-unit:     30px;
+$spacing-unit:		2em; 
 $main-max-width:	45em;
 
 $text-color:					#3F372F;
 $text-color-light:				lighten($text-color, 15%);
+$text-color-lighter:			lighten($text-color, 35%);
 $text-color-dark:				darken($text-color, 15%);
 $background-color:				#dad1c8;
 $background-color-dark:			darken($background-color, 5%);
 $background-color-darker:		darken($background-color, 15%);
+$background-color-darkest:		darken($background-color, 65%);
 $code-background-color:			rgba(236,230,224,0.5);
 $code-background-color-solid:	rgba(236,230,224,1);
 $inline-code-border-color:		#634b4a;
